gesamtwert in euro angepasst